[package]
name = "sshrs"
version = "0.1.0"
authors = ["Nick Mavis <itsnick@gmail.com>"]
description = "Wrapper for ssh2 bindings library. Easy SSH"
edition = "2018"
repository = "https://github.com/xentrick/sshrs"
keywords = ["ssh"]
license = "mit"

[dependencies]
failure = "^0.1.6"
ssh2 = "^0.5.0"

